--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     />
     <link href="/dist/output.css" rel="stylesheet" />
     <link href="/km2.ico" rel="icon" />
-    <title>MOHAMMED FAYIS KM</title>
+    <title>MOHAMMED FAYIS</title>
     <script defer="defer" src="/assets/js/main.f9497439.js"></script>
     <link href="/assets/css/main.729fb06f.css" rel="stylesheet" />
   </head>
